# ffts

./: .gitignore  ARCHITECTURE.md  ARM64_FFTS_INVESTIGATION.md  ARM64_FFT_DEBUG_PLAN.md  BUILD_PLAN.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  MERGE_ARM64_PLAN.md  MIGRATION_GUIDE.md  Makefile.in  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PLAN_x64.md  README_MODERN.md  aclocal.m4  build.py  build_android.sh  build_arm32.sh  build_arm64.sh  cmake_install.cmake  comprehensive_test.c  config.h.in  configure  configure.ac  debug_execution  debug_execution.c  debug_test  debug_test.c  hello_test.c  minimal_test.c  offset_test.c  offset_test_arm32.c  offset_test_arm64  simple_test  simple_test.c  (+1 more)
.github/workflows/: build.yml
benchmarks/: fft_benchmark.c
cmake/: arm64-toolchain.cmake  fftsConfig.cmake.in
examples/: simple_fft.c
java/: Makefile.in
scripts/: validate_arm64.sh
src/: Makefile.am  Makefile.in  codegen.c  codegen_arm64.h  ffts.c  ffts_real.c  ffts_runtime_arm64.c  ffts_runtime_arm64.h  ffts_transpose.c  ffts_trig.c  macros-neon.h  macros-neon64.h  macros.h  neon.s  neon64.s  neon64_simple.s  neon64_static.backup2  neon64_static.s  test_minimal.c
src/.deps/: arm64-codegen.Tpo  codegen.Tpo  ffts.Tpo  ffts_runtime_arm64.Tpo  ffts_static.Tpo  ffts_trig.Tpo
src/arch/arm64/: Makefile.am  arm64-codegen.c  arm64-codegen.h
tests/: Makefile.in  comprehensive_test  hello_test  minimal_test  minimal_test_static  neon64_static_unit  neon64_static_unit.c  neon64_static_unit_arm64  test.c  test_arm64.c  test_arm64_performance.c  test_arm64_performance_validation.c  test_arm64_validation.c  test_static  test_truly_static
